# djinn

./: .env.example  LICENSE  README.md  bot.py  codex.py  commands.py  config.py  pyproject.toml  state.py  telegram_utils.py
tests/: test_bot.py  test_codex.py
