[project]
name = "djinn"
version = "0.1.0"
description = "Telegram bridge for Codex App Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.64.0",
    "python-dotenv==1.0.1",
    "python-telegram-bot>=22.6,<23",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "ty>=0.0.18",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
